force-app/main/default/objects/FinancialAccountTransaction/FinancialAccountTransaction.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>