force-app/main/default/objects/FinancialAccountTransaction/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account Transactions</relationshipLabel>
    <relationshipName>Financial_Account_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>