force-app/main/default/objects/FinancialAccountTransaction/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Financial Account Transactions</relationshipLabel>
    <relationshipName>Financial_Account_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>