force-app/main/default/objects/FinancialAccountTransaction/fields/Challan__c.field-meta.xml
<CustomField>
    <fullName>Challan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challan</label>
    <referenceTo>Challan__c</referenceTo>
    <relationshipLabel>Financial Account Transactions</relationshipLabel>
    <relationshipName>Financial_Account_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>