force-app/main/default/objects/FinancialAccountTransaction/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Account Transactions</relationshipLabel>
    <relationshipName>Financial_Account_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>