force-app/main/default/objects/FinancialAccountTransaction/fields/FOS_Agent__c.field-meta.xml
<CustomField>
    <fullName>FOS_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOS Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Account Transactions Orignals (FOS Agent)</relationshipLabel>
    <relationshipName>Financial_Account_Transactions_Orignals</relationshipName>
    <type>Lookup</type>
</CustomField>