force-app/main/default/objects/FinancialAccountTransaction/fields/IFSC__c.field-meta.xml
<CustomField>
    <fullName>IFSC__c</fullName>
    <label>IFSC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>