force-app/main/default/objects/FinancialAccountTransaction/fields/MICR__c.field-meta.xml
<CustomField>
    <fullName>MICR__c</fullName>
    <label>MICR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>