force-app/main/default/objects/FinancialAccountTransaction/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay the Entire Amount</fullName>
            </value>
            <value>
                <fullName>Pay Partial Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>