force-app/main/default/objects/FinancialAccountTransaction/fields/RazorPay_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>RazorPay_Payment_Id__c</fullName>
    <label>RazorPay Payment Id</label>
    <type>TextArea</type>
</CustomField>