force-app/main/default/objects/FinancialAccountTransaction/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Financial Account Transactions Orignals</relationshipLabel>
    <relationshipName>Financial_Account_Transactions_Orignals</relationshipName>
    <type>Lookup</type>
</CustomField>