force-app/main/default/objects/FinancialAccountTransaction/fields/Refund_and_Waive_off_Request__c.field-meta.xml
<CustomField>
    <fullName>Refund_and_Waive_off_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund and Waive off Request</label>
    <referenceTo>Refund_and_Waive_off_Request__c</referenceTo>
    <relationshipLabel>Financial Account Transactions Orignals</relationshipLabel>
    <relationshipName>Financial_Account_Transactions_Orignals</relationshipName>
    <type>Lookup</type>
</CustomField>