force-app/main/default/objects/FinancialAccountTransaction/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(TransactionDate)))+&quot;/&quot; +
TEXT(MONTH(DATEVALUE(TransactionDate)))+&quot;/&quot; +
TEXT(YEAR(DATEVALUE(TransactionDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Text</type>
</CustomField>