force-app/main/default/objects/FinancialAccountTransaction/fields/Transaction_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sub_type__c</fullName>
    <label>Transaction Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Deposit</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Payment Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>