force-app/main/default/objects/FinancialAccountTransaction/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>TransactionDate</label>
    <type>Date</type>
</CustomField>