force-app/main/default/objects/FinancialAccountTransaction/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <label>Waiver Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate fees charged</fullName>
            </value>
            <value>
                <fullName>Fees Discovery</fullName>
            </value>
            <value>
                <fullName>Maintain customer relationship</fullName>
            </value>
            <value>
                <fullName>Notification not received</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>